protocols/tests/inverters/inverter_d0.out
error: Cannot perform OBSERVED FORBIDDEN PORT on DontCare value in Cannot observe output 's' after assigning DontCare to a dependent input
  ┌─ inverters/inverter_d0.prot:7:12
  │
7 │   DUT.a := DUT.s;
  │            ^^^^^ Cannot perform OBSERVED FORBIDDEN PORT on DontCare value in Cannot observe output 's' after assigning DontCare to a dependent input

